--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -594,7 +594,16 @@
                     android:layout_height="match_parent"
                     android:id="@+id/LinearMain4"
                     android:orientation="vertical">
+                    <Button
+                        style="@style/nanumTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="공동할일 추가하기"
+                        android:id="@+id/addBtnTodo"/>
+
                     <ToggleButton
+                        style="@style/nanumTextView"
                         android:id="@+id/toggleBtnrightleft"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -605,109 +614,87 @@
                         android:textOff="오른손잡이용 화면"
                         android:textOn="왼손잡이용 화면" />
 
-                    <ScrollView
+                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                        android:id="@+id/srl_Todo_right"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
-                        <LinearLayout
+                        android:layout_height="wrap_content">
+
+                        <ScrollView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            ////// righthanded
-<!--                            <LinearLayout-->
-<!--                                android:id="@+id/righthanded"-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="80dp"-->
-<!--                                android:background="@drawable/round_corner"-->
-<!--                                android:gravity="center_vertical"-->
-<!--                                android:visibility="visible"-->
-<!--                                android:layout_gravity="center_vertical">-->
-<!--                                <TextView-->
-<!--                                    android:layout_width="wrap_content"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:text="할 일"-->
-<!--                                    android:textStyle="bold"/>-->
-<!--                                <View-->
-<!--                                    android:layout_width="0dp"-->
-<!--                                    android:layout_height="0dp"-->
-<!--                                    android:layout_weight="1" />-->
-
-<!--                                <CheckBox-->
-<!--                                    android:id="@+id/checkedTextView1"-->
-<!--                                    android:layout_width="wrap_content"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_gravity="right|center_vertical"-->
-<!--                                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"-->
-<!--                                    android:checked="false"-->
-<!--                                    android:clickable="true"-->
-<!--                                    android:text="" />-->
-
-<!--                            </LinearLayout>-->
-
-                            <!--왼손잡이용 할일 카드-->
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
                             <LinearLayout
-                                android:id="@+id/lefthanded"
                                 android:layout_width="match_parent"
-                                android:layout_height="80dp"
-                                android:background="@drawable/round_corner"
-                                android:gravity="center_vertical"
-                                android:visibility="invisible"
-                                android:orientation="horizontal">
+                                android:layout_height="wrap_content"
+                                android:id="@+id/righthandList"
+                                android:orientation="vertical">
 
-                                <CheckBox
-                                    android:id="@+id/checkedTextView2"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-                                    android:checked="false"
-                                    android:clickable="true"
-                                    android:text="" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text=" 할 일"
-                                    android:textStyle="bold"/>
+                                // right left card
 
                             </LinearLayout>
-                        </LinearLayout>
-                    </ScrollView>
-                    <LinearLayout
-                        android:id="@+id/addtodoLayout"
+                        </ScrollView>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/todo_main_right"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        </androidx.recyclerview.widget.RecyclerView>
+
+                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                        android:id="@+id/srl_Todo_left"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <!--왼손용-->
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            android:id="@+id/addtodoleft"
-                            android:visibility="gone"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="bottom|left"
-                            android:layout_margin="10dp"
-                            android:clickable="true"
-                            android:backgroundTint="#FCBF48"
-                            android:src="@drawable/ic_baseline_add_24"
-                            tools:ignore="VectorDrawableCompat" />
-                        <View
-                            android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+
+                        <ScrollView
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="1" />
+                            android:layout_weight="1">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/lefthandList"
+                                android:orientation="vertical">
 
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            android:id="@+id/addtodoright"
-                            android:visibility="visible"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:clickable="true"
-                            android:backgroundTint="#FCBF48"
-                            android:src="@drawable/ic_baseline_add_24"
-                            tools:ignore="VectorDrawableCompat" />
+                                // right left card
+
+                            </LinearLayout>
+                        </ScrollView>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/todo_main_left"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        </androidx.recyclerview.widget.RecyclerView>
+
+                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-                    </LinearLayout>
+                    <!--                    <LinearLayout-->
+                    <!--                        android:id="@+id/addtodoLayout"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:orientation="horizontal">-->
+                    <!--                        &lt;!&ndash;왼손용&ndash;&gt;-->
+                    <!--                        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+                    <!--                            android:id="@+id/addtodoleft"-->
+                    <!--                            android:visibility="gone"-->
+                    <!--                            android:layout_width="wrap_content"-->
+                    <!--                            android:layout_height="wrap_content"-->
+                    <!--                            android:layout_gravity="bottom|left"-->
+                    <!--                            android:layout_margin="10dp"-->
+                    <!--                            android:clickable="true"-->
+                    <!--                            android:backgroundTint="#FCBF48"-->
+                    <!--                            android:src="@drawable/ic_baseline_add_24"-->
+                    <!--                            tools:ignore="VectorDrawableCompat" />-->
+                    <!--                        <View-->
+                    <!--                            android:layout_width="0dp"-->
+                    <!--                            android:layout_height="0dp"-->
+                    <!--                            android:layout_weight="1" />-->
+                    <!--                    </LinearLayout>-->
 
                 </LinearLayout>
                 <!--                -->
