--- a/MyApplication/app/src/main/res/layout/activity_schedule_content.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedule_content.xml
@@ -36,6 +36,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:padding = "15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
