--- a/MyApplication/app/src/main/res/layout/activity_schedule_edit.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedule_edit.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".CalendarKotlin.ScheduleEditActivity">
     <EditText
             android:layout_width="wrap_content"
@@ -17,115 +18,63 @@
             android:layout_marginStart="16dp"
             android:id="@+id/titleEdit"
             android:hint="Title"/>
-    <EditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingLeft="15dp"
+        android:orientation="horizontal">
+        <TextView
+            android:text="Date:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:id="@+id/placeEdit"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/titleEdit"
-            android:hint="Place"/>
-    <TextView
-            android:text="Start Time:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
+            android:gravity="center"
             android:id="@+id/textView2"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/placeEdit"/>
-    <EditText
-            android:layout_width="0dp"
+            android:paddingRight="15dp"
+            android:layout_marginTop="8dp"/>
+        <EditText
+
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="date"
+            android:layout_gravity="center"
             android:ems="10"
             android:id="@+id/startDateEdit"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
             android:textSize="14sp"
             android:hint="Date"/>
+    </LinearLayout>
+
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="time"
-            android:ems="10"
-            android:id="@+id/startTimeEdit"
-            app:layout_constraintStart_toEndOf="@+id/startDateEdit"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/startDateEdit"
-            android:textSize="14sp"
-            android:hint="Time"/>
-    <TextView
-            android:text="End Time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:id="@+id/textView3"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/startDateEdit"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/endDateEdit"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:textSize="14sp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="time"
-            android:ems="10"
-            android:id="@+id/endTimeEdit"
-            app:layout_constraintStart_toEndOf="@+id/endDateEdit"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/endDateEdit"
-            android:textSize="14sp"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:gravity="start|top"
-            android:ems="10"
-            android:id="@+id/detailEdit"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/endDateEdit"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Detail"
-            android:maxLines="7"
-            android:minLines="2"/>
-    <Button
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/detailEdit"
+        android:hint="Detail"
+        android:maxLines="7"
+        android:minLines="2"    />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:orientation="horizontal">
+        <Button
             android:text="Save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
             android:id="@+id/saveButton"
             android:background="@color/colorPrimaryDark"
             android:textColor="@android:color/white"/>
-    <Button
-            android:text="Delete"
+
+        <Button
+            android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp"
-            android:id="@+id/deleteButton"
+            android:layout_gravity="right"
+            android:layout_marginLeft="200dp"
             android:background="@color/colorPrimaryDark"
-            android:textColor="@android:color/white"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="Delete"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+</LinearLayout>
