--- a/MyApplication/app/src/main/res/layout/activity_schedulelist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedulelist.xml
@@ -3,21 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/todolistTime"
-        android:text="Time"
+        android:text="Title"
+        android:textSize="20dp"
         android:layout_marginRight="20dp"
         tools:ignore="MissingConstraints" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/todolistTitle"
-        android:text="To Do"
+        android:textSize="15dp"
+        android:text="Content"
         tools:ignore="MissingConstraints" />
 
 </LinearLayout>
