--- a/MyApplication/app/src/main/res/layout/activity_album_card.xml
+++ b/MyApplication/app/src/main/res/layout/activity_album_card.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/album_LinearLayout">
         <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -18,7 +18,7 @@
             card_view:cardCornerRadius="4dp">
 
             <ImageView
-                android:id="@+id/medicineImageView"
+                android:id="@+id/albumImageView"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:background="@drawable/roundback"
