--- a/MyApplication/app/src/main/res/layout/mypage_content.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_content.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/medicineImageView"
+            android:id="@+id/albumImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_input_medicine" />
