--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -150,7 +150,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="@color/white"
-                        android:text="펭귄"
+                        android:text="메시지"
                         android:textSize="18dp"
                         android:textStyle="bold"
                         android:background="#fcbf48"/>
@@ -162,42 +162,66 @@
                     android:id="@+id/LinearMainpage"
                     android:orientation="vertical">
 
-
-                    <Spinner
-                        android:id="@+id/spinner_message"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <EditText
-                        android:id="@+id/etToken"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="Enter Token"
-                        android:inputType="textPersonName"
-                        android:visibility="visible" />
+                        android:gravity="center"
+                        android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/etTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="Enter Title"
-                        android:inputType="textPersonName" />
 
-                    <EditText
-                        android:id="@+id/etMessage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="Enter message"
-                        android:inputType="textPersonName" />
+                        <TextView
+                            android:id="@+id/customCharacter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:text="커스텀 캐릭터"
+                            android:textColor="@color/black"
+                            android:textSize="30dp"
+                            android:textStyle="bold"/>
 
-                    <Button
-                        android:id="@+id/btnSend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Send" />
+
+                        <FrameLayout
+                            android:id="@+id/customImage"
+                            android:layout_width="412dp"
+                            android:layout_height="412dp">
+
+                            <FrameLayout
+                                android:id="@+id/deco"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                                <FrameLayout
+                                    android:id="@+id/body"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent">
+                                    <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:id="@+id/cu_body_Iv"/>
+
+                                </FrameLayout>
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:id="@+id/cu_acc_Iv"/>
+                            </FrameLayout>
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/cu_eye_Iv"/>
+                        </FrameLayout>
+
+                        <Button
+                            android:id="@+id/btn_familycustom"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right"
+                            android:layout_margin="5dp"
+                            android:text="가족 커스텀 만들러 가기" />
+
+                    </LinearLayout>
+
+
                 </LinearLayout>
                 <!--                -->
                 <LinearLayout
@@ -704,64 +728,42 @@
                     android:layout_height="match_parent"
                     android:id="@+id/LinearMain5"
                     android:orientation="vertical">
-                    <LinearLayout
+                    <Spinner
+                        android:id="@+id/spinner_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <EditText
+                        android:id="@+id/etToken"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:ems="10"
+                        android:hint="Enter Token"
+                        android:inputType="textPersonName"
+                        android:visibility="visible" />
 
+                    <EditText
+                        android:id="@+id/etTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Enter Title"
+                        android:inputType="textPersonName" />
 
-                        <TextView
-                            android:id="@+id/customCharacter"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="15dp"
-                            android:text="커스텀 캐릭터"
-                            android:textColor="@color/black"
-                            android:textSize="30dp"
-                            android:textStyle="bold"/>
+                    <EditText
+                        android:id="@+id/etMessage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Enter message"
+                        android:inputType="textPersonName" />
 
+                    <Button
+                        android:id="@+id/btnSend"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Send" />
 
-                        <FrameLayout
-                            android:id="@+id/customImage"
-                            android:layout_width="412dp"
-                            android:layout_height="412dp">
-
-                            <FrameLayout
-                                android:id="@+id/deco"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <FrameLayout
-                                    android:id="@+id/body"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:id="@+id/cu_body_Iv"/>
-
-                                </FrameLayout>
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:id="@+id/cu_acc_Iv"/>
-                            </FrameLayout>
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:id="@+id/cu_eye_Iv"/>
-                        </FrameLayout>
-
-                        <Button
-                            android:id="@+id/btn_familycustom"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_margin="5dp"
-                            android:text="가족 커스텀 만들러 가기" />
-
-                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
