--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -50,7 +50,22 @@
                         android:layout_height="wrap_content"
                         android:text="2021-07-20 21:00" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="right"
+                    android:gravity="right">
 
+                    <ImageView
+                        android:id="@+id/notice_card_delete"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/home_board_menu"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
