--- a/MyApplication/app/src/main/res/layout/activity_board_content.xml
+++ b/MyApplication/app/src/main/res/layout/activity_board_content.xml
@@ -47,120 +47,149 @@
         android:layout_height="1dp"
         android:background="#d3d3d3" />
 
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/srl_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_margin="10dp"
+        android:layout_height="wrap_content">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:id="@+id/notice_card_Layout"
+                android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/notice_card_Layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:orientation="horizontal">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/notice_profileB"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_margin="5dp"
+                            android:src="@drawable/son" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                style="@style/nanumTextView"
+                                android:textSize="17dp"
+                                android:id="@+id/notice_nameB"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="홍길동"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+                            <TextView
+                                style="@style/nanumTextView"
+                                android:id="@+id/notice_timeB"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="2021-07-20 21:00" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/black" />
+
+                <TextView
+                    style="@style/nanumTextView"
+                    android:textSize="16dp"
+                    android:id="@+id/notice_boardB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:text="\@엄마 오늘 몇시에 오시나요??"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/notice_imageB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/familyship" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        style="@style/nanumTextView"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:src="@drawable/chat" />
+
+                    <TextView
+                        android:id="@+id/notice_comment2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="0" />
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:orientation="horizontal">
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/notice_profileB"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_margin="5dp"
-                        android:src="@drawable/son" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_weight="9"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            style="@style/nanumTextView"
-                            android:textSize="17dp"
-                            android:id="@+id/notice_nameB"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="홍길동"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-                        <TextView
-                            style="@style/nanumTextView"
-                            android:id="@+id/notice_timeB"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="2021-07-20 21:00" />
-                    </LinearLayout>
-
+                        android:textSize="16dp"
+                        android:hint="댓글을 입력하세요"
+                        android:id="@+id/comment_editText"/>
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/comment_Btn"
+                        android:textSize="16dp"
+                        android:text="입력"/>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:id="@+id/comment_Layout"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:orientation="vertical" />
+
+
             </LinearLayout>
+        </ScrollView>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/black" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <TextView
-                style="@style/nanumTextView"
-                android:textSize="16dp"
-                android:id="@+id/notice_boardB"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="\@엄마 오늘 몇시에 오시나요??"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        </androidx.recyclerview.widget.RecyclerView>
 
-            <ImageView
-                android:layout_gravity="center"
-                android:id="@+id/notice_imageB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/familyship" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/heart" />
-
-                <TextView
-                    style="@style/nanumTextView"
-                    android:id="@+id/notice_heart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="3" />
-
-                <ImageView
-                    style="@style/nanumTextView"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/chat" />
-
-                <TextView
-                    android:id="@+id/notice_comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="1" />
-            </LinearLayout>
-
-
-        </LinearLayout>
-    </ScrollView>
 
 </LinearLayout>
