--- a/MyApplication/app/src/main/res/layout/activity_schedule_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedule_main.xml
@@ -19,7 +19,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="Simple Calendar"
-            app:titleTextColor="@color/design_default_color_primary" />
+            app:titleTextColor="#231B0A" />
 
         <include
             android:id="@+id/include"
@@ -32,7 +32,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_add" app:backgroundTint="@color/design_default_color_primary"
+            app:srcCompat="@drawable/ic_add" app:backgroundTint="#FCBF48"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
             app:layout_constraintEnd_toEndOf="parent"/>
