--- a/MyApplication/app/src/main/res/layout/activity_schedulelist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_schedulelist.xml
@@ -7,19 +7,22 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/todolistTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/todolistTime"
-        android:text="Title"
-        android:textSize="20dp"
         android:layout_marginRight="20dp"
+        android:text="Title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="25dp"
         tools:ignore="MissingConstraints" />
+
     <TextView
+        android:id="@+id/todolistTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/todolistTitle"
-        android:textSize="15dp"
+        android:layout_marginBottom="15dp"
         android:text="Content"
+        android:textSize="20dp"
         tools:ignore="MissingConstraints" />
 
 </LinearLayout>
