--- a/MyApplication/app/src/main/res/layout/activity_home_dialog.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home_dialog.xml
@@ -5,7 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="#fcbf48">
+        <TextView
+            style="@style/nanumTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="안부"/>
+    </LinearLayout>
     <Button
         style="@style/nanumTextView"
         android:id="@+id/btnCall"
