--- a/MyApplication/app/src/main/res/layout/appwidget.xml
+++ b/MyApplication/app/src/main/res/layout/appwidget.xml
@@ -3,36 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/appwidgetText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="RadioButton" />
-
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Switch" />
-
-        <Button
-            android:id="@+id/btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="위젯"
-            android:textSize="16sp" />
-    </LinearLayout>
-
+    <Button
+        android:id="@+id/asdfasdfasdf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="위젯"
+        android:textSize="16sp"/>
 </FrameLayout>
