Todo percent & emotion

--- a/MyApplication/app/src/main/res/layout/activity_home_todo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home_todo.xml
@@ -24,6 +24,20 @@
             android:text="공동 할일"/>
     </LinearLayout>
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:layout_marginLeft="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/familyIDChbx"
+            android:text="예시1"/>
+
+    </LinearLayout>
+    <LinearLayout
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
